[package]
name = "notepush"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tracing = "0.1.40"
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = { version = "0.4.38" }
a2 = { version = "0.10.0" }
tokio = { version = "1.38.0", features = ["full"] }
tungstenite = "0.23.0"
nostr = "0.32.1"
log = "0.4"
env_logger = "0.11.3"
nostr-sdk = "0.32.0"
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.10"
dotenv = "0.15.0"
